# ghoststream

./: .gitignore  Cargo.toml  README.md  SPEC.md  build.zig  build.zig.zon
include/: ghoststream.h
src/: cabi.zig  capture.zig  config.rs  error.rs  lib.rs  main.rs  main.zig  nvenc.zig  pipeline.rs  root.zig  types.rs
src/audio/: capture.rs  encode.rs  mod.rs  types.rs
src/capture/: dmabuf.rs  mod.rs  portal.rs  stream.rs
src/encode/: amf.rs  mod.rs  nvenc.rs  qsv.rs  software.rs
src/output/: camera.rs  file.rs  mod.rs  muxer.rs  rtmp.rs  srt.rs
src/processing/: convert.rs  hdr.rs  mod.rs  scale.rs
